# X-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-emscripten.bat  build-emscripten.sh  compile-shaders.sh  imgui.ini  linux-deps.sh  shaders.cmake  shell.html
include/: imgui_impl_bgfx.h  imgui_impl_sdl2.cpp  imgui_shaders.h
shaders/: bgfx_shader.sh
src/: file-ops.h  imgui_bgfx.h  main.cpp  main.cpp.old
submodules/: CMakeLists.txt  imgui.cmake
toolchains/: apple.cmake  windows-ucrt64.cmake
