set(GLFW_BUILD_EXAMPLES  OFF CACHE INTERNAL "")
set(GLFW_INSTALL         OFF CACHE INTERNAL "")
set(GLFW_BUILD_TESTS     OFF CACHE INTERNAL "")
set(GLFW_BUILD_DOCS      OFF CACHE INTERNAL "")
add_subdirectory(glfw)

set(BGFX_BUILD_TOOLS     ON  CACHE INTERNAL "")
set(BGFX_CUSTOM_TARGETS  OFF CACHE INTERNAL "")
set(BGFX_BUILD_EXAMPLES  OFF CACHE INTERNAL "")
add_subdirectory(bgfx)

include(imgui.cmake)

#set(GLM_TEST_ENABLE      OFF CACHE INTERNAL "")
#set(BUILD_SHARED_LIBS    OFF CACHE INTERNAL "")
#set(BUILD_STATIC_LIBS    OFF CACHE INTERNAL "")
#add_subdirectory(glm)